# asm-hashes

./: README.md
.github/workflows/: md5.yml  sha1.yml  sha2.yml  whirlpool.yml  workspace.yml
md5/: CHANGELOG.md  Cargo.toml  build.rs
md5/benches/: lib.rs
md5/src/: asm.rs  lib.rs  x64_masm.asm  x86.S
sha1/: CHANGELOG.md  Cargo.toml  build.rs
sha1/benches/: lib.rs
sha1/src/: aarch64.rs  aarch64_apple.S  consts.rs  lib.rs  loongarch64.S  x64_masm.asm  x86.S
sha2/: CHANGELOG.md  Cargo.toml  build.rs
sha2/benches/: lib.rs  sha2.rs
sha2/src/: aarch64.rs  lib.rs  sha256-avx2-asm.S  sha256.rs  sha256_aarch64_macos.S  sha256_avx2_x64.S  sha256_x64.c  sha256_x64_avx2.S  sha256_x64_masm.asm  sha256_x64_ni.S  sha512_x64_avx2.S  sha512_x64_masm.asm
whirlpool/: CHANGELOG.md  Cargo.toml  build.rs
whirlpool/benches/: lib.rs
whirlpool/src/: lib.rs  x64_masm.asm  x86.S
