[package]
name = "md5-asm"
version = "0.5.1"
authors = ["RustCrypto Developers"]
license = "MIT"
description = "Assembly implementation of MD5 compression function"
documentation = "https://docs.rs/md5-asm"
repository = "https://github.com/RustCrypto/asm-hashes"
keywords = ["crypto", "md5", "asm"]
categories = ["cryptography", "no-std"]
edition = "2018"

[build-dependencies]
cc = "1.0"
