[package]
name = "sha2-asm"
version = "0.6.3"
authors = ["RustCrypto Developers"]
license = "MIT"
description = "Assembly implementation of SHA-2 compression functions"
documentation = "https://docs.rs/sha2-asm"
repository = "https://github.com/RustCrypto/asm-hashes"
keywords = ["crypto", "sha2", "asm"]
categories = ["cryptography", "no-std"]
edition = "2018"

[build-dependencies]
cc = "1.0"
