[package]
name = "whirlpool-asm"
version = "0.6.0"
authors = ["RustCrypto Developers"]
license = "MIT"
description = "Assembly implementation of Whirlpool compression function"
documentation = "https://docs.rs/whirlpool-asm"
repository = "https://github.com/RustCrypto/asm-hashes"
keywords = ["crypto", "whirlpool", "asm"]
categories = ["cryptography", "no-std"]
edition = "2018"

[build-dependencies]
cc = "1.0"
